# altcha-poc

./: README.md  app.py  pyproject.toml
static/js/: app.js
templates/: index.html
